Improved selection interface element (ComboBox + context menu) for Downloads, Incomplete, Collection and Torrents folders in Settings. Updated translations.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9529 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -419,7 +419,7 @@ CAPTION "Downloads"
 FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
     GROUPBOX        "Save Completed Files Here",IDC_STATIC,7,7,268,33,WS_GROUP
-    EDITTEXT        IDC_DOWNLOADS_FOLDER,14,19,225,12,ES_AUTOHSCROLL | ES_READONLY
+    COMBOBOX        IDC_DOWNLOADS_FOLDER,14,19,225,180,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "",IDC_DOWNLOADS_BROWSE,245,15,23,20
     GROUPBOX        "Scan every completed file with AntiVirus",IDC_STATIC,7,44,268,34
     LTEXT           "Select AntiVirus:",IDC_STATIC,14,60,75,8
@@ -442,7 +442,7 @@ BEGIN
     CONTROL         "Only download and upload to networks which are connected.",IDC_REQUIRE_CONNECT,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,165,268,10
     GROUPBOX        "Store Temporary Incomplete Files Here",IDC_STATIC,7,180,268,33,WS_GROUP
-    EDITTEXT        IDC_INCOMPLETE_FOLDER,14,193,225,12,ES_AUTOHSCROLL | ES_READONLY
+    COMBOBOX        IDC_INCOMPLETE_FOLDER,14,193,225,180,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "",IDC_INCOMPLETE_BROWSE,245,188,23,20
 END
 
@@ -1061,8 +1061,8 @@ BEGIN
     COMBOBOX        IDC_PRIVATE_TYPES,160,106,60,63,CBS_SIMPLE | CBS_AUTOHSCROLL | CBS_SORT | CBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "&Add",IDC_PRIVATE_ADD,225,106,40,15
     PUSHBUTTON      "&Remove",IDC_PRIVATE_REMOVE,225,125,40,15
-    GROUPBOX        "Store &Collections Here:",IDC_STATIC,5,178,270,35,WS_GROUP
-    EDITTEXT        IDC_COLLECTIONS_FOLDER,15,192,225,12,ES_AUTOHSCROLL | ES_READONLY
+    GROUPBOX        "Store Collections Here",IDC_STATIC,5,178,270,35,WS_GROUP
+    COMBOBOX        IDC_COLLECTIONS_FOLDER,15,192,225,180,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "",IDC_COLLECTIONS_BROWSE,245,188,23,20
     CONTROL         "Create ghost files when deleting",IDC_MAKE_GHOSTS,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,74,126,10
@@ -1688,14 +1688,14 @@ BEGIN
     CONTROL         "Prefer torrent sources",IDC_TORRENT_PREFERENCE,"Button",BS_AUTOCHECKBOX | BS_VCENTER | WS_TABSTOP,15,100,212,11,WS_EX_TRANSPARENT
     CONTROL         "Enable EndGame mode when completing torrents",IDC_TORRENT_ENDGAME,
                     "Button",BS_AUTOCHECKBOX | WS_GROUP | WS_TABSTOP,15,111,250,15
-    EDITTEXT        IDC_TORRENTS_FOLDER,15,143,225,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_TABSTOP
+    COMBOBOX        IDC_TORRENTS_FOLDER,15,143,225,180,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "",IDC_TORRENTS_BROWSE,245,139,23,20
     EDITTEXT        IDC_TORRENTS_TORRENTMAKER,15,176,225,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_TABSTOP
     PUSHBUTTON      "",IDC_TORRENTS_TORRENTMAKERBROWSE,245,172,23,20
     EDITTEXT        IDC_TORRENT_DEFAULTTRACKER,83,197,184,12,ES_AUTOHSCROLL
     GROUPBOX        "&BitTorrent Network:",IDC_STATIC,5,5,270,52,WS_GROUP
     GROUPBOX        "&Download Connections:",IDC_STATIC,5,59,270,70
-    GROUPBOX        "&Store Torrents Here:",IDC_STATIC,5,131,270,32,WS_GROUP
+    GROUPBOX        "Store Torrents Here",IDC_STATIC,5,131,270,32,WS_GROUP
     LTEXT           "Torrents at once",IDC_STATIC,55,71,85,12,SS_CENTERIMAGE
     LTEXT           "Client connections",IDC_STATIC,185,71,85,12,SS_CENTERIMAGE
     LTEXT           "%",IDC_STATIC,266,89,8,11,SS_CENTERIMAGE,WS_EX_TRANSPARENT
@@ -3281,6 +3281,10 @@ BEGIN
     IDS_SCHEDULER_TASK_DONE "Done"
     IDS_SCHEDULER_TASK_WAITING "Waiting..."
     IDS_SCHEDULER_NOTASK    "No Tasks Currently Scheduled"
+    IDS_SELECT_FOLDER_DOWNLOAD "Save Completed Files Here"
+    IDS_SELECT_FOLDER_INCOMPLETE "Store Temporary Incomplete Files Here"
+    IDS_SELECT_FOLDER_TORRENTS "Store Torrents Here"
+    IDS_SELECT_FOLDER_COLLECTIONS "Store Collections Here"
 END
 
 STRINGTABLE
@@ -4362,6 +4366,8 @@ BEGIN
     ID_NETWORK_CONNECT      "Connect to selected networks."
     ID_NETWORK_DISCONNECT   "Disconnect from all networks, this will also stop all downloads and uploads."
     ID_TOOLS_SETTINGS       "Configure Shareaza settings..."
+    ID_PATH_EXPLORE         "Explore this path."
+    ID_PATH_COPY            "Copy this path to clipboard."
     ID_VIEW_SYSTEM          "Show or hide the SYSTEM window."
     ID_VIEW_NEIGHBOURS      "Show or hide the NEIGHBOURS window."
 END
