Added quick search for advanced settings. GZIP resources moved to .rc2.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9534 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza_10.vcxproj.filters
+++ b/shareaza/Shareaza_10.vcxproj.filters
@@ -1089,7 +1089,7 @@
     <ClCompile Include="PageSettingsSkins.cpp">
       <Filter>Source Files\Pages</Filter>
     </ClCompile>
-    <ClCompile Include="PageSettingsTraffic.cpp">
+    <ClCompile Include="PageSettingsAdvanced.cpp">
       <Filter>Source Files\Pages</Filter>
     </ClCompile>
     <ClCompile Include="PageSettingsUploads.cpp">
@@ -2226,7 +2226,7 @@
     <ClInclude Include="PageSettingsSkins.h">
       <Filter>Header Files\Pages</Filter>
     </ClInclude>
-    <ClInclude Include="PageSettingsTraffic.h">
+    <ClInclude Include="PageSettingsAdvanced.h">
       <Filter>Header Files\Pages</Filter>
     </ClInclude>
     <ClInclude Include="PageSettingsUploads.h">
