Added a DC++ hub list URL as a full fledged discovery services (renamed "Discovery.UpdatePeriod" option to "Discovery.AccessPeriod"; renamed "eDonkey.MetAutoQuery" option to "eDonkey.AutoDiscovery"; added new option "DC.AutoDiscovery"; updated translations).
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9544 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -2837,6 +2837,9 @@ BEGIN
 0x3147, 0x472f, 0x2032, 0x5747, 0x6265, 0x6143, 0x6863, 0x0065, 
     IDC_SERVICE_TYPE, 0x403, 15, 0
 0x6553, 0x7672, 0x7265, 0x6d2e, 0x7465, 0x5520, 0x4c52, "\000" 
+    IDC_SERVICE_TYPE, 0x403, 18, 0
+0x4344, 0x2b2b, 0x4820, 0x6275, 0x4c20, 0x7369, 0x2074, 0x5255, 0x004c, 
+
     IDC_SERVICE_TYPE, 0x403, 8, 0
 0x6c42, 0x636f, 0x656b, 0x0064, 
     0
